--- a/Blog/Web/Blog.Web.ViewModels/Blog.Web.ViewModels.csproj
+++ b/Blog/Web/Blog.Web.ViewModels/Blog.Web.ViewModels.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlSanitizer" Version="3.3.142" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.4" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.164" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
