--- a/Blog/Web/Blog.Web/appsettings.Development.json
+++ b/Blog/Web/Blog.Web/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Cloudinary": {
+    "CloudName": "dmvrh3bvc",
+    "APIKey": "179521815726758",
+    "APISecret": "JwbGBtzTeHGN9_9hHwSKIGlelcc"
+  },
+  "SendGrid": {
+    "APIKey": "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"
   }
 }
